--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(codal-stm32)
 
 include("${CODAL_UTILS_LOCATION}")
-
+RECURSIVE_FIND_DIR(INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/inc" "*.h")
 list(APPEND INCLUDE_DIRS
     "${CMAKE_CURRENT_SOURCE_DIR}/inc"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/"
@@ -30,7 +30,7 @@ LIST(APPEND C_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}//variants/${device.devic
 
 
 
-RECURSIVE_FIND_FILE(CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/" "*.cpp")
+RECURSIVE_FIND_FILE(CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/" "*.c??")
 
 set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -T\"${CMAKE_CURRENT_LIST_DIR}/variants/${device.device}/ldscript.ld\"" PARENT_SCOPE)
 set(CMAKE_EXE_LINKER_FLAGS    "${CMAKE_EXE_LINKER_FLAGS} -T\"${CMAKE_CURRENT_LIST_DIR}/variants/${device.device}/ldscript.ld\"" PARENT_SCOPE)
