--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,11 @@ project(codal-stm32)
 
 include("${CODAL_UTILS_LOCATION}")
 
-set(CMAKE_CXX_CLANG_TIDY
-    clang-tidy;
-    --extra-arg=-std=c++20;
-    --extra-arg=-Wno-error;
-    --extra-arg=-Wno-register;)
+#set(CMAKE_CXX_CLANG_TIDY
+#    clang-tidy;
+#    --extra-arg=-std=c++20;
+#    --extra-arg=-Wno-error;
+#    --extra-arg=-Wno-register;)
 
 RECURSIVE_FIND_DIR(INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/inc" "*.h")
 list(APPEND INCLUDE_DIRS
