--- a/.github/workflows/codal-buildpr.yml
+++ b/.github/workflows/codal-buildpr.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  checkouts:
+  buildpr:
     runs-on: ubuntu-latest
     container:
       image: nedseb/arm-gcc-none-eabi:latest
