--- a/.github/workflows/codal-buildtarget.yml
+++ b/.github/workflows/codal-buildtarget.yml
@@ -15,7 +15,7 @@ jobs:
       - name: checkout codal
         uses: actions/checkout@v2
         with:
-          repository: letssteam/codal-letssteam
+          repository: letssteam/codal
           path: codal
       - name: codal build
         run: |
