--- a/.github/workflows/codal-buildpr.yml
+++ b/.github/workflows/codal-buildpr.yml
@@ -32,17 +32,23 @@ jobs:
           repository: letssteam/codal-stm32-DISCO_L475VG_IOT
           path: codal/libraries/codal-stm32-DISCO_L475VG_IOT
 
-      - name: checkout codal-stm32-NUCLEO_F4x1RE
-        uses: actions/checkout@v2
-        with:
-          repository: letssteam/codal-stm32-NUCLEO_F4x1RE
-          path: codal/libraries/codal-stm32-NUCLEO_F4x1RE
+      # - name: checkout codal-stm32-NUCLEO_F4x1RE
+      #   uses: actions/checkout@v2
+      #   with:
+      #     repository: letssteam/codal-stm32-NUCLEO_F4x1RE
+      #     path: codal/libraries/codal-stm32-NUCLEO_F4x1RE
       
       - name: checkout codal-stm32-PNUCLEO_WB55RG
         uses: actions/checkout@v2
         with:
           repository: letssteam/codal-stm32-PNUCLEO_WB55RG
           path: codal/libraries/codal-stm32-PNUCLEO_WB55RG
+      
+      - name: checkout codal-stm32-STEAM32_WB55RG
+        uses: actions/checkout@v2
+        with:
+          repository: letssteam/codal-stm32-STEAM32_WB55RG
+          path: codal/libraries/codal-stm32-STEAM32_WB55RG
 
       - name: checkout PR
         uses: actions/checkout@v2
@@ -75,31 +81,31 @@ jobs:
         run: |
           cd codal
           rm -Rf samples source codal.json 
-      - name: create codal.json for codal-stm32-NUCLEO_F4x1RE
-        run: |
-          echo \
-            "{
-              \"target\": {
-              \"name\": \"$REPO_NAME\", 
-              \"url\": \"$REPO_URL\",
-              \"branch\": \"main\",
-              \"type\": \"git\",
-              \"dev\": true
-              }
-            }" > codal/codal.json
-        env:
-          REPO_NAME: codal-stm32-NUCLEO_F4x1RE
-          REPO_PATH: codal/libraries/codal-stm32-NUCLEO_F4x1RE
-          REPO_URL: https://github.com/letssteam/codal-stm32-NUCLEO_F4x1RE
-      - name: build codal-stm32-NUCLEO_F4x1RE
-        run: |
-          cd codal
-          ./build.py -c
+      # - name: create codal.json for codal-stm32-NUCLEO_F4x1RE
+      #   run: |
+      #     echo \
+      #       "{
+      #         \"target\": {
+      #         \"name\": \"$REPO_NAME\", 
+      #         \"url\": \"$REPO_URL\",
+      #         \"branch\": \"main\",
+      #         \"type\": \"git\",
+      #         \"dev\": true
+      #         }
+      #       }" > codal/codal.json
+      #   env:
+      #     REPO_NAME: codal-stm32-NUCLEO_F4x1RE
+      #     REPO_PATH: codal/libraries/codal-stm32-NUCLEO_F4x1RE
+      #     REPO_URL: https://github.com/letssteam/codal-stm32-NUCLEO_F4x1RE
+      # - name: build codal-stm32-NUCLEO_F4x1RE
+      #   run: |
+      #     cd codal
+      #     ./build.py -c
 
-      - name: clean codal-stm32-NUCLEO_F4x1RE
-        run: |
-          cd codal
-          rm -Rf samples source codal.json 
+      # - name: clean codal-stm32-NUCLEO_F4x1RE
+      #   run: |
+      #     cd codal
+      #     rm -Rf samples source codal.json 
       
       
       - name: create codal.json for codal-stm32-PNUCLEO_WB55RG
@@ -124,6 +130,33 @@ jobs:
           ./build.py -c
 
       - name: clean codal-stm32-PNUCLEO_WB55RG
+        run: |
+          cd codal
+          rm -Rf samples source codal.json 
+      
+      
+      - name: create codal.json for codal-stm32-STEAM32_WB55RG
+        run: |
+          echo \
+            "{
+              \"target\": {
+              \"name\": \"$REPO_NAME\", 
+              \"url\": \"$REPO_URL\",
+              \"branch\": \"main\",
+              \"type\": \"git\",
+              \"dev\": true
+              }
+            }" > codal/codal.json
+        env:
+          REPO_NAME: codal-stm32-STEAM32_WB55RG
+          REPO_PATH: codal/libraries/codal-stm32-STEAM32_WB55RG
+          REPO_URL: https://github.com/letssteam/codal-stm32-STEAM32_WB55RG
+      - name: build codal-stm32-STEAM32_WB55RG
+        run: |
+          cd codal
+          ./build.py -c
+
+      - name: clean codal-stm32-STEAM32_WB55RG
         run: |
           cd codal
           rm -Rf samples source codal.json 
