Remove F4x1RE target + add STEAMI target

--- a/.github/workflows/codal-buildtarget.yml
+++ b/.github/workflows/codal-buildtarget.yml
@@ -22,6 +22,8 @@ jobs:
           cd codal
           ./build.py -d codal-stm32-DISCO_L475VG_IOT
           rm -Rf samples source codal.json  
-          ./build.py -d codal-stm32-NUCLEO_F4x1RE
+          # ./build.py -d codal-stm32-NUCLEO_F4x1RE
+          # rm -Rf samples source codal.json  
+          ./build.py -d codal-stm32-STEAM32_WB55RG
           rm -Rf samples source codal.json  
           ./build.py -d codal-stm32-PNUCLEO_WB55RG
